Fixes unaligned bullet points on Edge and IE11 in blog page | Fixes #72

--- a/packages/marble/src/templates/root/_elements.scss
+++ b/packages/marble/src/templates/root/_elements.scss
@@ -112,6 +112,8 @@
     width: 2rem;
     position: absolute;
     left: -1.5rem;
+    line-height: calc(1rem * #{$lineHeight});
+    vertical-align: middle;
   }
 
   ul.checklist {
